--- a/毕业项目源码和数据库/源码/AnTen/AnTen/Content/PMain/global.css
+++ b/毕业项目源码和数据库/源码/AnTen/AnTen/Content/PMain/global.css
@@ -365,7 +365,8 @@ a:hover {
 
             .header .nav .logo img, .header .nav .logo > a {
                 display: block;
-                height: 100%;
+                height: 500px;
+                width:300px;
             }
 
     .header .navList {
@@ -460,7 +461,7 @@ a:hover {
     }
 
     .header .seachBtn {
-        background: url(../image/head_sea.png) no-repeat center;
+        background: url(../../image/head_sea.png) no-repeat center;
         height: 32px;
         width: 32px;
     }
