--- a/毕业项目源码和数据库/源码/AnTen/AnTen/Content/PMain/lyc.css
+++ b/毕业项目源码和数据库/源码/AnTen/AnTen/Content/PMain/lyc.css
@@ -1350,7 +1350,7 @@ header {
     margin-top: -12px;
     left: -25px;
     text-indent: -9999px;
-    background: url(../image/lyc/sciencedtail-img2.png) no-repeat left bottom;
+    background: url(../../image/Left-img2.png) no-repeat left bottom;
     border-radius: 50%;
 }
 
@@ -1360,7 +1360,7 @@ header {
     margin-top: -12px;
     right: -25px;
     text-indent: -9999px;
-    background: url(../image/lyc/sciencedtail-img2.png) no-repeat right bottom;
+    background: url(../../image/Left-img2.png) no-repeat right bottom;
     border-radius: 50%;
 }
 
