--- a/毕业项目源码和数据库/源码/AnTen/AnTen/Views/AT_Login/Default.cshtml
+++ b/毕业项目源码和数据库/源码/AnTen/AnTen/Views/AT_Login/Default.cshtml
@@ -181,7 +181,7 @@
                 </li>
                 <li class="l4" edit_params="width%3D78%26height%3D76%26title1Show%3D1%26title1Max%3D8%26showLink%3D1%26backgroundColor%3D1">
                     <span class="ico animated"><img title="" alt="" src="~/image/预约挂号.png"></span>
-                    <p class="p">预约挂号</p>
+                    <p class="p">在线问诊</p>
                     <a href="/en.html" class="link">点击进入</a>
                 </li>
             </ul>
