--- a/毕业项目源码和数据库/源码/AnTen/AnTen/Views/AT_PMain/PanMain.cshtml
+++ b/毕业项目源码和数据库/源码/AnTen/AnTen/Views/AT_PMain/PanMain.cshtml
@@ -115,13 +115,13 @@
             <li class="li_3" style="    background: url(../image/医院地址.jpg) no-repeat center;" edit_params="width%3D80%26height%3D65%26showLink%3D1%26title1Show%3D1%26title1Max%3D8%26backgroundColor%3D1">
                 <a href="/nosocomial.html" target="_blank" class="a">
                     <div class="ico"><img src="~/image/医院地址.png"></div>
-                    <h3>医院位置</h3>
+                    <h3>快速提问</h3>
                 </a>
             </li>
             <li class="li_4" edit_params="width%3D80%26height%3D65%26showLink%3D1%26title1Show%3D1%26title1Max%3D8%26backgroundColor%3D1">
                 <a href="/characteristic.html#part3" target="_blank" class="a">
                     <div class="ico"><img src="~/image/专科专病.png"></div>
-                    <h3>专科专病</h3>
+                    <h3>名院专家</h3>
                 </a>
             </li>
         </ul>
@@ -434,7 +434,7 @@
                 <li class="li_1 li_4 tran_scale" edit_params="width%3D308%26height%3D272%26showAlt%3D1"><a><img title="" alt="" src="~/image/ln4-4.jpg"></a></li>
                 <li class="li_1 tran_scale" edit_params="width%3D308%26height%3D272%26showAlt%3D1"><a><img title="2" alt="22" src="~/image/ln4-5.jpg"></a></li>
                 <li class="li_1 tran_scale" edit_params="width%3D308%26height%3D272%26showAlt%3D1%26descriptionShow%3D1%26descriptionMax%3D160%26showLink%3D1">
-                    <a href="http://telemedicine.pumch.cn/#/login" target="_blank">
+                    <a href="" target="_blank">
                         <img src="~/image/ln4-6.jpg">
                         <div class="tit">
                             <h3>远程医学中心</h3>
