--- a/毕业项目源码和数据库/源码/AnTen/AnTen/Views/Shared/_LayoutPage_Pan.cshtml
+++ b/毕业项目源码和数据库/源码/AnTen/AnTen/Views/Shared/_LayoutPage_Pan.cshtml
@@ -18,14 +18,14 @@
 
     <link type="text/css" rel="stylesheet" href="~/Content/PMain/global.css" />
     <link type="text/css" rel="stylesheet" href="~/Content/PMain/lyc.css" />
-    <link type="text/css" rel="stylesheet" href="~/Content/PMain/jquery.mCustomScrollbar.css" />
-    <link type="text/css" href="~/Content/PMain/page.css" rel="stylesheet" />
-    <link type="text/css" href="~/Content/PMain/slick.css" rel="stylesheet" />
-    <script type="text/javascript" src="~/Scripts/PMain/global.js"></script>
-    <script type="text/javascript" src="~/Scripts/PMain/jquery.mCustomScrollbar.min.js"></script>
+    <link type="text/css" rel="stylesheet" href="~/Content/PMain/slick.css" />
+    <link type="text/css" rel="stylesheet" href="~/Content/PMain/page.css" />
     <script type="text/javascript" src="~/Scripts/PMain/jquery.min.js"></script>
+    <script type="text/javascript" src="~/Scripts/PMain/global.js"></script>
     <script type="text/javascript" src="~/Scripts/PMain/jquery.mousewheel.js"></script>
-    <script type="text/javascript" src="~/Scripts/PMain/slick.js"></script>
+    <link type="text/css" rel="stylesheet" href="~/Content/PMain/jquery.mCustomScrollbar.css" />
+    <script type="text/javascript" src="~/Scripts/PMain/jquery.mCustomScrollbar.min.js"></script>
+   <script type="text/javascript" src="~/Scripts/PMain/slick.js"></script>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
 
@@ -82,15 +82,15 @@
                 </a>
             </li>
             <li>
-                <a href="/characteristic.html#part2" target="_blank">
+                <a href="#" target="_blank">
                     <span class="s1">
                         <img title="" src="~/image/Rlist_3.png" title="" alt="">
                     </span>
-                    <span class="s2">特色科室</span>
+                    <span class="s2">快速购药</span>
                 </a>
             </li>
             <li>
-                <a href="http://telemedicine.pumch.cn/#/login" target="_blank">
+                <a href="#" target="_blank">
                     <span class="s1">
                         <img title="" src="~/image/Rlist_4.png" title="" alt="">
                     </span>
@@ -108,69 +108,66 @@
          
         </ul>
     </div><div class="header">
-        <a href="javascript:;" class="menu_h"><span>Menu</span></a>
+        <a href="#" class="menu_h"><span>Menu</span></a>
         <div class="top">
             <div class="wrap">
-                <a href="http://www.pumch.cn/en.html" class="en ">我的</a>            <a href="http://www.pumch.cn/staff.html">医院版</a>            <a href="http://www.pumch.cn/learning.html">游客版</a>            <a href="http://www.pumch.cn/patient.html" class="on">患者版</a>
+                <a href="#" class="en ">我的</a>            <a href="#">医院版</a>            <a href="#">游客版</a>            <a href="#" class="on">患者版</a>
             </div>
         </div>
         <div class="nav">
             <div class="wrap cf">
                 <div class="logo" edit_params="width%3D102%26height%3D86%26showAlt%3D1">
-                    <a href="http://www.pumch.cn/patient">
+                    <a href="#">
                         <img title="十安医生"   src="~/image/Logo3.png"  style="height:120px;width:200px"/>
                     </a>
                 </div>        <div class="navList">
                     <ul class="cf">
                         <li>
                             <a href="/register.html" class="one">预约挂号<span class="open">+</span></a>
-                            <div class="secondNav">
-                                <a href="/register.html">APP预约</a><a href="/register.html?tab=电话预约">电话预约</a><a href="/register.html?tab=国际医疗部预约">国际医疗部预约</a><a href="/register.html?tab=网上预约">网上预约</a><a href="/register.html?tab=银行卡预约">银行卡预约</a><a href="/register.html?tab=自助机预约">自助机预约</a>
-                            </div>
+                            
                         </li>
                         <li>
-                            <a href="/characteristic.html" class="one">特色诊疗<span class="open">+</span></a>
-                            <div class="secondNav">
-                                <a href="/characteristic.html">疑难病会诊中心</a><a href="http://telemedicine.pumch.cn/#/login">远程医学中心</a><a href="/characteristic.html#part2">特色科室</a><a href="/characteristic.html#part3">专科专病</a><a href="/characteristic.html#part4">诊疗新技术</a>
-                            </div>
+                            <a href="/characteristic.html" class="one">症状自诊<span class="open">+</span></a>
+   
                         </li>
                         <li>
                             <a href="/doctors.html" class="one">找医生</a>
+                            <div class="secondNav">
+                                <a href="/characteristic.html">按科室</a><a href="#">按疾病</a><a href="/characteristic.html#part2">按医院</a>
+                            </div>
                         </li>
                         <li>
-                            <a href="/department.html" class="one">科室导航</a>
+                            <a href="/department.html" class="one">快速购药</a>
                         </li>
                         <li>
                             <a href="/visitinfo.html" class="one">就医指南<span class="open">+</span></a>
                             <div class="secondNav">
-                                <a href="/visitinfo.html">门诊出诊表</a><a href="/regulations.html">规章制度</a><a href="/medical_notice.html">就医须知</a><a href="/medical_guide.html">医保指南</a><a href="/nosocomial.html">医院位置</a><a href="/azimuth.html">院内导航</a><a href="/community.html">社区转诊</a><a href="/price_publicity.html">价格公示</a><a href="/query_service.html">查询服务</a><a href="/letter_thanks.html">感谢信</a><a href="/department_ims/guide/feedback.html">意见反馈</a><a href="/reportquery.html">报告查询</a><a href="/patientQA.html">患者问答</a>
+                                <a href="/visitinfo.html">门诊出诊表</a><a href="/query_service.html">查询服务</a><a href="/letter_thanks.html">感谢信</a><a href="/department_ims/guide/feedback.html">意见反馈</a><a href="/reportquery.html">报告查询</a><a href="/patientQA.html">患者问答</a>
                             </div>
                         </li>
                         <li>
                             <a href="/pnotice.html" class="one">找医院</a>
                         </li>
                         <li>
-                            <a href="/bignews.html" class="one">新闻中心<span class="open">+</span></a>
-                            <div class="secondNav">
-                                <a href="/bignews.html">重大新闻</a><a href="/tends.html">医院动态</a><a href="/fronts.html">医学前沿</a><a href="/medias.html">媒体聚焦</a><a href="/humanities.html">人文关怀</a><a href="/newspapers.html">十安报</a><a href="/videos.html">视频新闻</a>
-                            </div>
+                            <a href="/bignews.html" class="one">疾病知识库<span class="open">+</span></a>
+
                         </li>
                         <li>
                             <a href="/popular.html" class="one">健康科普</a>
                         </li>
                     </ul>
                     <ul style="padding-top:0">
-                        <li class="pc_displayNone"><a href="http://mjpumch.cbpt.cnki.net/WKC3/WebPublication/index.aspx?mid=xhyx" target="_blank" class="one">十安医学杂志</a></li>
-                        <li class="pc_displayNone"><a href="http://paper.pumch.cn/" target="_blank" class="one">十安院报</a></li>
+                        <li class="pc_displayNone"><a href="#" target="_blank" class="one">十安医学杂志</a></li>
+                        <li class="pc_displayNone"><a href="#" target="_blank" class="one">十安院报</a></li>
                         <li class="pc_displayNone"><a href="/Uploads/blz360/index.html" target="_blank" class="one">病历展</a></li>
-                        <li class="pc_displayNone"><a href="http://www.pumch.cn/Uploads/quanjing/" target="_blank" class="one">院史馆</a></li>
+                        <li class="pc_displayNone"><a href="#" target="_blank" class="one">院史馆</a></li>
                     </ul>
                 </div>
                 <div class="shareNav cf">
-                    <a href="http://mjpumch.cbpt.cnki.net/WKC3/WebPublication/index.aspx?mid=xhyx" target="_blank" class="a1">十安医学杂志</a>
-                    <a href="http://paper.pumch.cn/" target="_blank" class="a1">十安院报</a>
+                    <a href="#" target="_blank" class="a1">十安医学杂志</a>
+                    <a href="#" target="_blank" class="a1">十安院报</a>
                     <a href="/Uploads/blz360/index.html" target="_blank" class="a1">病历展</a>
-                    <a href="http://www.pumch.cn/Uploads/quanjing/" target="_blank" class="a1">院史馆</a>
+                    <a href="#" target="_blank" class="a1">院史馆</a>
                     <a href="javascript:;" class="seachBtn" title="搜索" style="  background: url(../../image/head_sea.png) no-repeat center;
         height: 32px;
         width: 32px;"></a>
@@ -294,12 +291,12 @@
         })
     </script>
 
-    <div class="footer " style="border:1px solid red;background-color:#3a3a3a">
+    <div class="footer " style="background-color:#3a3a3a">
         <div class="link">
             <div class="wrap cf">
                 <span class="l">友情链接：</span>
                 <div class="a">
-                    <a href="http://www.nhc.gov.cn/" target="_blank">中华人民共和国国家卫生健康委员会</a><a href="http://wjw.beijing.gov.cn/" target="_blank">北京市卫生健康委员会</a><a href="http://www.cams.ac.cn/" target="_blank">中国医学科学院</a><a href="http://www.pumf.org/" target="_blank">北京协和医学基金会</a><a href="http://www.xiehekjkf.com/" target="_blank">协和科技开发有限责任公司</a><a class="last" href="http://www.xiehejx.com/" target="_blank">协和化妆品</a>
+                    <a href="#" target="_blank">中华人民共和国国家卫生健康委员会</a><a href="#" target="_blank">北京市卫生健康委员会</a><a href="#" target="_blank">中国医学科学院</a><a href="#" target="_blank">北京协和医学基金会</a><a href="#" target="_blank">协和科技开发有限责任公司</a><a class="last" href="#" target="_blank">协和化妆品</a>
                 </div>
             </div>
         </div>    <div class="copy">
@@ -313,7 +310,7 @@
                 </div>
                 <div class="right">
                     <p>Copyright 十安在线医生 All Rights Reserved. 本站内容仅供参考，不作为诊断及医疗依据         
-                    <p><a href="http://www.fractal-technology.com" target="_blank">网站参考</a>：<a href="http://www.fractal-technology.com" target="_blank">北京分形科技北京协和医院</a></p>
+                    <p><a href="#" target="_blank">网站参考</a>：<a href="#" target="_blank">北京分形科技北京协和医院</a></p>
                 </div>
             </div>
         </div>
@@ -358,7 +355,7 @@
         var _hmt = _hmt || [];
         (function () {
             var hm = document.createElement("script");
-            hm.src = "https://hm.baidu.com/hm.js?e433a0b553c50c4663c2ef927781bc71";
+            hm.src = "#";
             var s = document.getElementsByTagName("script")[0];
             s.parentNode.insertBefore(hm, s);
         })();
@@ -367,7 +364,7 @@
         var _hmt = _hmt || [];
         (function () {
             var hm = document.createElement("script");
-            hm.src = "https://hm.baidu.com/hm.js?fa06b5d83a50d14d11bd70f117d24063";
+            hm.src = "#";
             var s = document.getElementsByTagName("script")[0];
             s.parentNode.insertBefore(hm, s);
         })();
